# Jukebox

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  Jukebox.elf.launch  Jukebox.ioc  README.md  STM32F411VETX_FLASH.ld  STM32F411VETX_RAM.ld  bootstrap.sh  build.mk  flash.sh  makefile
.github/workflows/: main.yml
Core/Inc/: FreeRTOSConfig.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: adc.c  dma.c  freertos.c  gpio.c  main.c  stm32f4xx_it.c  stm32f4xx_it.cc  usart.c
Ditto/: build.mk
Drivers/BSP/STM32F411E-Discovery/: stm32f411e_discovery_audio.c
Jukebox/Inc/: ACKSound.h  FailSound.h  JukeboxStart.h  OkSound.h
Jukebox/Inc/ADC/: ADC_Dev.h
Jukebox/Inc/AudioPlayer/: AudioPlayerFactory.h  I2SAudioPlayer.h  IAudioPlayer.h
Jukebox/Inc/AudioPlayer/Decoder/: IDecoder.h  Mp3Decoder.h  WavDecoder.h
Jukebox/Inc/KeyPad/: IKeyPad.h  KeyPadAnalog.h  KeyPadFactory.h
Jukebox/Inc/LED/: LedController.h  ws2812.h
Jukebox/Inc/Logger/: Logger.h
Jukebox/Inc/MassStorageDevice/: FatFsDirReader.h  FatFsFile.h  FileInfo.h  FlashFile.h  IDirReader.h  IFile.h  IMassStorageDevice.h  MassStorageDeviceFactory.h  USBHostMSC.h
Jukebox/Inc/OS/: Mutex.h  Queue.h  Semaphore.h  Task.h  UniqueLock.h
Jukebox/Inc/SM/: KeyPadSM.h
Jukebox/Inc/Utils/: CircularBuffer.h
Jukebox/Src/: JukeboxStart.cc
Jukebox/Src/ADC/: ADC_Dev.cc
Jukebox/Src/AudioPlayer/: AudioPlayerFactory.cc  I2SAudioPlayer.cc  IAudioPlayer.cc
Jukebox/Src/AudioPlayer/Decoder/: IDecoder.cc  Mp3Decoder.cc  WavDecoder.cc
Jukebox/Src/KeyPad/: KeyPadAnalog.cc  KeyPadFactory.cc
Jukebox/Src/LED/: LedController.cc
Jukebox/Src/Logger/: Logger.cc
Jukebox/Src/MassStorageDevice/: FatFsDirReader.cc  FatFsFile.cc  FlashFile.cc  IMassStorageDevice.cc  MassStorageDeviceFactory.cc  USBHostMSC.cc
Jukebox/Src/OS/: Mutex.cc  Semaphore.cc  Task.cc  UniqueLock.cc
Jukebox/Src/SM/: KeyPadSM.cc
Jukebox/Src/Utils/: CircularBuffer.cc
Postform/libpostform/: build.mk
USB_HOST/App/: usb_host.c
cmake/: toolchain.cmake
